traffic-split-with-gateway/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucp2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-ucp2 #Selector label
      version: v1 # this is just label 
      example: traffic-management
  template:
    metadata:
      labels:
        app: myapp-ucp2
        version: v1
        example: traffic-management
    spec:
      containers:
      - name: ucp2-container
        image: docker.io/pintulohargcetts/nginx_custom:v4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ucp2-svc
  labels:
    app: myapp-ucp2
    version: v1
    example: traffic-management 
spec:
  type: ClusterIP # Not using node port . will be accessing from clusture . 
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: myapp-ucp2 #Selector label
    version: v1
    example: traffic-management
